# python-docannometa

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-python-package.yml  test-python-package.yml
src/: docannometa.py
tests/: requirements.txt  test_docannometa.py
