[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core ~= 3.4"]

[project]
name = "docannometa"
version = "0.1"
authors = [
    { name = "Laurie O", email = "laurie_opperman@hotmail.com" },
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">= 3.6"
dynamic = ["description"]

[project.urls]
Source = "https://github.com/EpicWink/python-docannometa"
